# pg-activity-qt

./: LICENSE  Makefile  README.rst  pyproject.toml
app/: activity.py  main.py  threads.py
app/gui/: activity.py  activity.ui  connect.py  connect.ui  util.py
