[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=40.8.0"]

[project]
authors = [
	{name = "Caleb P. Burns", email = "cpburnz@gmail.com"},
]
license = {text = "MIT License"}
name = "pg-activity-qt"
version = "0.1.dev1"

[tool.setuptools.packages.find]
include = ["app", "app.*"]
